--- a/src/AppBundle/Resources/config/doctrine/Contact.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Contact.orm.yml
@@ -1,51 +1,29 @@
 AppBundle\Entity\Contact:
     type: entity
-    table: contact
+    table: null
+    repositoryClass: AppBundle\Repository\ContactRepository
     id:
         id:
             type: integer
-            nullable: false
-            options:
-                unsigned: false
             id: true
             generator:
-                strategy: IDENTITY
+                strategy: AUTO
     fields:
         name:
             type: string
-            nullable: false
-            length: 50
-            options:
-                fixed: false
-        lastname:
+            length: '100'
+        lastName:
             type: string
-            nullable: false
-            length: 50
-            options:
-                fixed: false
-            column: lastName
+            length: '100'
         email:
             type: string
-            nullable: false
-            length: 50
-            options:
-                fixed: false
+            length: '100'
         mobile:
             type: string
-            nullable: false
-            length: 9
-            options:
-                fixed: false
+            length: '100'
         curso:
             type: string
-            nullable: false
-            length: 50
-            options:
-                fixed: false
+            length: 255
         observations:
             type: text
-            nullable: false
-            length: null
-            options:
-                fixed: false
     lifecycleCallbacks: {  }
