--- a/src/AppBundle/Resources/config/doctrine/Curso.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Curso.orm.yml
@@ -1,20 +1,15 @@
 AppBundle\Entity\Curso:
     type: entity
-    table: curso
+    table: null
+    repositoryClass: AppBundle\Repository\CursoRepository
     id:
         id:
             type: integer
-            nullable: false
-            options:
-                unsigned: false
             id: true
             generator:
-                strategy: IDENTITY
+                strategy: AUTO
     fields:
         name:
             type: string
-            nullable: false
-            length: 50
-            options:
-                fixed: false
+            length: 255
     lifecycleCallbacks: {  }
