Created form contact home

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -6,7 +6,8 @@ parameters:
     database_user: root
     database_password: null
     mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
+    mailer_host: smtp.gmail.com
+    mailer_port: 25
+    mailer_user:  oneal152@gmail.com
+    mailer_password:  On3al@14789
     secret: 6122e02976c7b7b6d39cba02bad404ad58276749
