--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -19,3 +19,7 @@ monolog:
             level: debug
         console:
             type:  console
+
+swiftmailer:
+    username:  '%mailer_user%'
+    password:  '%mailer_password%'
