--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-menu-bundle": "^2.0",
         "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
