--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ var
 app/config/parameters.yml
 web/sboza2/*
 .idea
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/webSboza2.iml
+web/bundles/framework
+web/sboza2/
