changed git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@ var
 app/config/parameters.yml
 web/sboza2/*
 .idea
-.idea/*
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/sboza2.iml
 .idea/webSboza2.iml
 web/bundles/framework
 web/sboza2/
