--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+login_check:
+    path: /login_check
+logout:
+    path: /logout
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
